Fix T40228: cycles CUDA multi GPU + world MIS giving error.